--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <div class="heading font-bold text-3xl">Products</div>
     <div class="products flex flex-col mt-2 gap-2">
       <div class=" product1 bg-slate-800 p-3 rounded-md text-lg font-semibold flex gap-9 items-center">
-        <span> Product <span class="product">1</span>- $<span class="price">29.99</span></span>
-        <button class="addToCart  bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px]">Add To Cart</button>
-        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden">Remove</button>
+        <span> <span class="product">Milk</span>- $<span class="price">29.99</span></span>
+        <button class="addToCart  bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] ml-auto">Add To Cart</button>
+        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden ml-auto">Remove</button>
       </div>
 
       <div class=" product2 bg-slate-800 p-3 rounded-md text-lg font-semibold flex gap-9 items-center">
-        <span> Product <span class="product">2</span>- $<span class="price">19.99</span></span>
-        <button class="addToCart  bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px]">Add To Cart</button>
-        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden">Remove</button>
+        <span><span class="product">Bread</span>- $<span class="price">19.99</span></span>
+        <button class="addToCart  bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] ml-auto">Add To Cart</button>
+        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden ml-auto">Remove</button>
       </div>
 
       <div class=" product3 bg-slate-800 p-3 rounded-md text-lg font-semibold flex gap-9 items-center">
-        <span> Product <span class="product">3</span>- $<span class="price">49.99</span></span>
-        <button class="addToCart bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px]">Add To Cart</button>
-        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden">Remove</button>
+        <span> <span class="product">Potato</span>- $<span class="price">49.99</span></span>
+        <button class="addToCart bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] ml-auto">Add To Cart</button>
+        <button class="remove bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100 w-[115px] hidden ml-auto">Remove</button>
       </div>
       
     </div> 
@@ -38,7 +38,7 @@
     </div>
 
     <div class="counter flex flex-col self-end text-lg font-semibold mt-3">
-      <div class="text-lg font-semibold">Total: $ <span class="bill">0</span></div>
+      <div class="text-lg font-semibold">Total: $ <span class="bill">0.00</span></div>
       <button class="checkout bg-blue-600 rounded-md p-2 hover:bg-blue-400 duration-100">Checkout</button>
     </div>
   </div>
